Version 4.1.0 (#95)
* Version 3.2.1

* Remove potential NPE issues

* Version 3.3.0

* Added config option to show or not show particles.

* Add Chinese Translation (#63)

* Rename zh_CN.json to zh_CN.yml (#64)

* Add a clearer message when WBAPI is not found (#65)

It is not mandatory to use WorldBorderAPI, so it should be clear for the user
that they have a choice besides integrating with it.

* Remove `hooked` field (refactor) (#66)

Removing the `hooked` field because it was used locally
and could be removed as a simple refactoring to shorter and simpler code.

* Unify wording of WBAPI-excluded configs (#67)

* Unify wording of WBAPI-excluded configs

* Add `show-particles` to README

* Clarify message for show-particles setting

* Implement per-player border type (#69)

* Rename PlayerBorder.barrier to show

* Move player event handlers to PlayerListener

* Remove PlayerBorder

* Implement PerPlayerBorderProxy

Currently defaulting to Customer (non-wbapi) border

* Add BorderTypeCommand

* Create BorderType

* Add messages to BorderTypeCommand

* Prepare PerPlayerBorderProxy for handling edge cases

The user may not have a border type set, then we return with the default.
The user's border type may be unavailable now for two reasons:
1. Border type has been disabled after a server/plugin restart
2. Border type is obsolete and does not exist anymore (forward compatibility).

* Fix message reference at BorderTypeCommand

* Use null for missing wbapiBorder

It is fine since it is never used

* Avoid wbapi "border show" spam on player move

* At command, replace args.isEmpty() with size() != 1

To also show help if more parameters are passed than necessary

* Small refactor

* Fix set-type permission in addon.yml

* Update README

Co-authored-by: tastybento <tastybento@users.noreply.github.com>

* Cleanup documentation (#70)

* Remove commented code

* Purify config.yml

As I see, this